# latex-compiler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: main.py
app/compiler/v1/: controllers.py  services.py
app/core/: config.py  logger.py
uploads/: health_check.tex  test.tex
