[project]
name = "latex-compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=7.0.1",
    "sentry-sdk>=2.48.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.10",
]
